--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -12,13 +12,14 @@
   }
   
   .logo, .mobile-logo {
+    flex: 1;
     font-size: 30px;
     font-weight: bold;
     color: white;
   }
   
   .nav-links {
-    display: none;
+    display: flex;
  
   }
   
