--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -17,6 +17,7 @@ body {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   width: 450px;
   margin: 28px;
+  text-align: left;
 }
 
 .RegForm h2, .LoginForm h2 {
@@ -76,6 +77,6 @@ body {
 .RegForm form, .LoginForm form {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
 }
 
